# osrs_gph

./: .gitignore  Cargo.toml  LICENSE  TODO.md  clippy.bat  config.toml  config.yaml  flamegraph.bat  generate_lookup.py  results.txt
OSRS/: config.toml  pareto_sort.py  profit_margins.py  test.json  test.py
OSRS/api_data/: price_data.json
OSRS/backup-2023-07-18-2022/: data.json  id_to_name.json  item_search.json  name_to_id.json  profit_margins.py  recipes.json
OSRS/generate_lookup_old/: generate_lookup.py
OSRS/lookup_data/: id_to_name.json  item_search.json  mapping.json  recipes_old.json
OSRS/results/: optimal_overview.txt  recipe_lookup.txt
api_data/: price_data.json
lookup_data/: id_to_name.json  id_to_name.yaml  mapping.json  mapping.yaml  name_to_id.json  name_to_id.yaml  recipes.json  recipes.yaml  recipes_old.json  recipes_old.yaml
lookup_data/OLD/: id_to_name.json  name_to_id.json
osrs_gph/: Cargo.toml  config.toml  flamegraph.bat  generate_lookup.py  results.txt
osrs_gph/api_data/: price_data.json
osrs_gph/lookup_data/: name_to_id.json  recipes.json
osrs_gph/results/: optimal_overview.txt
osrs_gph/src/: api.rs  convenience.rs  data_types.rs  errors.rs  file_io.rs  item_search.rs  lib.rs  logging.rs  main.rs  pareto_sort.rs  price_handle.rs
results/: optimal_overview.md  optimal_overview.md.old  optimal_overview.txt  recipe_lookup.md  recipe_lookup.md.old
src/: api.rs  backend.rs  config.rs  convenience.rs  data_types.rs  errors.rs  file_io.rs  helpers.rs  item_search.rs  lib.rs  logging.rs  main.rs  pareto_sort.rs  price_handle.rs  prices.rs  results_writer.rs  types.rs
src/item_search/: data_types.rs  item_search.rs  mod.rs  recipes.rs
src/prices/: mod.rs  pareto_sort.rs  prices.rs
