[package]
name = "osrs_gph"
version = "0.1.0"
edition = "2021"
default-run = "osrs_gph"


[dependencies]
enum-map = { version = "2.7.3", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
clap_derive = "4.5.49"
itertools = "0.14.0"
num-format = "0.4.4"
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml_ng = "0.10.0"
tabled = "0.15.0"
thousands = "0.2.0"
tracing = "0.1.41"
# TODO: Add json support?
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


# Keep debug information by default
# Can disable this through CLI args
[profile.release]
debug = true


# Clippy is smarter than me
[lints.clippy]
# pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow" # FUTURE: Change to "warn" when all errors are documented

